--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="modal-background"></div>
-    <div class="modal-message">
-      <ul>
-        <li><h2></h2></li>
-        <li><button></button></li>
-      </ul>
-    </div>
     <form novalidate>
       <fieldset>
         <legend>Please fill in all boxes</legend>
@@ -22,11 +15,13 @@
           <li class="list-item-email">
             <label for="email">Email:</label>
             <input name="email" type="email" id="email" required />
+            <span></span>
             <div class="email-error"></div>
           </li>
           <li class="list-item-country">
             <label for="country">Country:</label>
             <input name="country" type="text" id="country" required />
+            <span></span>
             <div class="country-error"></div>
           </li>
           <li class="list-item-postcode">
@@ -38,6 +33,7 @@
               pattern="^[A-Z]{1,2}\d[A-Z\d]? ?\d[A-Z]{2}$"
               required
             />
+            <span></span>
             <div class="postcode-error"></div>
           </li>
           <li class="list-item-password-one">
@@ -49,6 +45,7 @@
               pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
               required
             />
+            <span></span>
             <div class="password-one-error"></div>
           </li>
           <li class="list-item-password-two">
@@ -60,11 +57,25 @@
               pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
               required
             />
+            <span></span>
             <div class="password-two-error"></div>
           </li>
           <li><button class="submit" type="button">Submit</button></li>
         </ul>
       </fieldset>
     </form>
+    <div class="modal-background">
+      <div class="modal-message">
+        <ul>
+          <li>
+            <h2>
+              Form Successfully Submitted
+              <p>🥳🥳🥳</p>
+            </h2>
+          </li>
+          <li><button class="close-button">Close</button></li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
